--- a/package.json
+++ b/package.json
@@ -89,9 +89,12 @@
     ]
   },
   "devDependencies": {
+    "@babel/helper-create-regexp-features-plugin": "^7.10.1",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.0",
-    "node-sass": "npm:dart-sass@1.25.0"
+    "node-sass": "npm:dart-sass@1.25.0",
+    "svg-sprite-loader": "^5.0.0",
+    "svgo-loader": "^2.2.1"
   },
   "jest": {
     "roots": [
