--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "acount",
+  "name": "morney-13",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -21,9 +21,9 @@
     "babel-preset-react-app": "^9.1.2",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
-    "classnames": "^2.2.6",
+    "classnames": "2.2.6",
     "css-loader": "3.4.2",
-    "dayjs": "^1.8.28",
+    "dayjs": "^1.8.26",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "eslint": "^6.6.0",
@@ -43,6 +43,7 @@
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
     "mini-css-extract-plugin": "0.9.0",
+    "node-sass": "npm:dart-sass",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -54,13 +55,13 @@
     "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^5.1.2",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
     "semver": "6.3.0",
     "style-loader": "0.23.1",
-    "styled-components": "^5.1.1",
+    "styled-components": "^5.0.1",
     "terser-webpack-plugin": "2.3.5",
     "ts-pnp": "1.1.6",
     "typescript": "~3.7.2",
@@ -92,12 +93,11 @@
   },
   "devDependencies": {
     "@babel/helper-create-regexp-features-plugin": "^7.10.1",
-    "@types/classnames": "^2.2.10",
-    "@types/react-router-dom": "^5.1.5",
-    "@types/styled-components": "^5.1.0",
-    "@types/webpack-env": "^1.15.2",
-    "node-sass": "npm:dart-sass@1.25.0",
-    "svg-sprite-loader": "^5.0.0",
+    "@types/classnames": "2.2.6",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/styled-components": "^5.0.1",
+    "@types/webpack-env": "^1.15.1",
+    "svg-sprite-loader": "^4.2.2",
     "svgo-loader": "^2.2.1"
   },
   "jest": {
@@ -129,7 +129,7 @@
       "^.+\\.module\\.(css|sass|scss)$"
     ],
     "modulePaths": [
-      "/Users/sun/Desktop/demo/acount/src"
+      "D:\\Fang\\Jirengu\\morney-13\\src"
     ],
     "moduleNameMapper": {
       "^react-native$": "react-native-web",
