--- a/package.json
+++ b/package.json
@@ -76,7 +76,9 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
-    "deploy": "sh scripts/deploy.sh"
+    "deploy:gitee": "sh scripts/deploy_gitee.sh",
+    "deploy:github": "sh scripts/deploy_github.sh",
+    "deploy": "sh scripts/deploy_gitee.sh;sh scripts/deploy_github.sh"
   },
   "eslintConfig": {
     "extends": "react-app"
